--- a/index.html
+++ b/index.html
@@ -28,21 +28,24 @@
                     <div class="botones-container">
                         <div class="botones">
                             <img src="aus.png" class="aus" alt="">
-                            <a href="https://twitter.com/hopieev/status/1750567850849268068?t=uHlbF-iotHyz3C2VTFECKQ&s=19" class="hipervinculoanimacion button-wrapper"> Ausㅤㅤ╰┈➤</a>
+                            <h3>Aus</h3>
+                            <a href="https://twitter.com/hopieev/status/1750567850849268068?t=uHlbF-iotHyz3C2VTFECKQ&s=19" class="hipervinculoanimacion button-wrapper">ㅤ╰┈➤</a>
                         </div>
                     </div>
         
                     <div class="botones-container">
                         <div class="botones">
                             <img src="canal.png" alt="">
-                            <a href="https://whatsapp.com/channel/0029VaKqVUs5K3zR8VnCIh0j" class="hipervinculoanimacion button-wrapper">Canalㅤ╰┈➤</a>
+                            <h3>Canal</h3>
+                            <a href="https://whatsapp.com/channel/0029VaKqVUs5K3zR8VnCIh0j" class="hipervinculoanimacion button-wrapper">╰┈➤</a>
                         </div>
                     </div>
         
                     <div class="botones-container">
                         <div class="botones">
                             <img src="qa.png" alt="">
-                            <a href="https://ngl.link/twoseokiee1" class="hipervinculoanimacion button-wrapper">Q&Aㅤ╰┈➤</a>
+                            <h3>Q&A</h3>
+                            <a href="https://ngl.link/twoseokiee1" class="hipervinculoanimacion button-wrapper">╰┈➤</a>
                         </div>
                     </div>
                 </div>
